# fastapi-offline-docs

./: .gitignore  README.md  pyproject.toml
fastapi_offline_docs/: __init__.py
tests/: test_main.py
